<resources>
    <string name="app_name">freebie</string>

    <string name="give_storage_permission">Give storage permission</string>
    <string name="permission_explanation">We need permission to read your internal storage so you can play your music</string>
    <string name="permission_notice">If you deny the prompt, you will have to enter settings and request the permission manually</string>
    <string name="permission_denied_toast">Enter settings and grant storage access</string>
    <string name="start_app">Let\'s go!</string>
    <string name="nothing_playing">Nothing is playing</string>

    <!-- Navigation bar titles -->
    <string name="home">Home</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="settings">Settings</string>

    <string name="back">Back</string>
</resources>