<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_action_home"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_albums"
        android:icon="@drawable/ic_action_albums"
        android:title="@string/albums"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_artists"
        android:icon="@drawable/ic_action_artists"
        android:title="@string/artists"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/settings"
        app:showAsAction="always" />
</menu>
